--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -222,29 +222,49 @@ jobs:
       - name: Health check
         run: |
           echo "Waiting for application to be fully ready..."
-          sleep 15
+          sleep 30
           
-          max_attempts=10
+          # Проверяем напрямую на сервере через SSH (это главная проверка)
+          echo "Checking health directly on server..."
+          max_attempts=20
           attempt=0
+          server_ready=false
+          
           while [ $attempt -lt $max_attempts ]; do
-            if curl -f https://technobar.by/api/health; then
-              echo "Health check passed!"
-              exit 0
+            if ssh -o ConnectTimeout=5 "$SSH_USER@$SERVER_HOST" "cd /opt/bartech && docker-compose -f docker-compose.yml -f docker-compose.prod.yml exec -T nextjs wget --no-verbose --tries=1 --spider http://127.0.0.1:3000/api/health 2>/dev/null"; then
+              echo "✅ Server health check passed!"
+              server_ready=true
+              break
             fi
             attempt=$((attempt + 1))
-            echo "Health check attempt $attempt/$max_attempts failed, retrying..."
-            sleep 5
+            echo "Server health check attempt $attempt/$max_attempts failed, waiting..."
+            sleep 3
           done
           
-          echo "ERROR: Health check failed after $max_attempts attempts"
-          ssh "$SSH_USER@$SERVER_HOST" << 'EOF'
-            cd /opt/bartech
-            echo "=== Container Status ==="
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml ps
-            echo "=== Next.js Logs ==="
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml logs nextjs --tail=50
-            echo "=== Nginx Logs ==="
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml logs nginx --tail=50
-          EOF
-          exit 1
+          if [ "$server_ready" = false ]; then
+            echo "ERROR: Server health check failed after $max_attempts attempts"
+            ssh "$SSH_USER@$SERVER_HOST" << 'EOF'
+              cd /opt/bartech
+              echo "=== Container Status ==="
+              docker-compose -f docker-compose.yml -f docker-compose.prod.yml ps
+              echo "=== Next.js Logs (last 50 lines) ==="
+              docker-compose -f docker-compose.yml -f docker-compose.prod.yml logs --tail=50 nextjs
+              echo "=== Nginx Logs (last 50 lines) ==="
+              docker-compose -f docker-compose.yml -f docker-compose.prod.yml logs --tail=50 nginx
+            EOF
+            exit 1
+          fi
+          
+          # Дополнительная проверка через Cloudflare (не критично)
+          echo "Server is healthy! Optionally checking through Cloudflare..."
+          sleep 5
+          
+          if curl -f --max-time 5 --connect-timeout 3 https://technobar.by/api/health 2>/dev/null; then
+            echo "✅ Cloudflare health check also passed!"
+          else
+            echo "⚠️  Cloudflare check failed (may be caching), but server is operational"
+          fi
+          
+          echo "✅ Deployment successful - server is running and healthy!"
+          exit 0
 
