--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.2.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
+    "audit": "^0.0.6",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "cloudinary": "^2.8.0",
