--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,13 @@ services:
       args:
         - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
         - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+      # Увеличиваем лимиты памяти для процесса сборки
+      shm_size: '2gb'
     container_name: bartech-nextjs
     restart: unless-stopped
+    # Лимиты памяти для runtime контейнера
+    mem_limit: 4g
+    memswap_limit: 4g
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
