--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - app-network
-    entrypoint: "/bin/sh -c 'chmod +x /auto-renew-certs.sh /reload-nginx.sh && trap exit TERM; while :; do /auto-renew-certs.sh; sleep 12h & wait $${!}; done'"
+    entrypoint: "/bin/sh -c 'apk add --no-cache docker-cli >/dev/null 2>&1 || true; chmod +x /auto-renew-certs.sh /reload-nginx.sh && trap exit TERM; while :; do /auto-renew-certs.sh; sleep 12h & wait $${!}; done'"
 
 volumes:
   technobar_certbot-etc:
