--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,11 @@ http {
     types_hash_max_size 2048;
     client_max_body_size 20M;
 
+    limit_req_zone $binary_remote_addr zone=quiz:10m rate=1r/m;
+
+    real_ip_header CF-Connecting-IP;
+    set_real_ip_from 0.0.0.0/0;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -109,6 +114,16 @@ http {
             add_header Cache-Control "public, max-age=2592000" always;
         }
 
+        location /api/quiz {
+            limit_req zone=quiz burst=0 nodelay;
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # API endpoints - отключаем кеширование для всех API запросов
         location /api/ {
             proxy_pass http://nextjs:3000;
@@ -135,6 +150,6 @@ http {
             proxy_pass http://nextjs:3000/api/health;
             access_log off;
             add_header Cache-Control "no-store, no-cache, must-revalidate" always;
-        }
+        } 
     }
 }
