--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,6 +29,14 @@ http {
     real_ip_header CF-Connecting-IP;
     set_real_ip_from 0.0.0.0/0;
 
+    # Настройки кеширования для proxy
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=image_cache:10m max_size=1g inactive=7d use_temp_path=off;
+    proxy_cache_key "$scheme$request_method$host$request_uri";
+    proxy_cache_valid 200 7d;
+    proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+    proxy_cache_background_update on;
+    proxy_cache_revalidate on;
+
     # Gzip compression
     gzip on;
     gzip_vary on;
@@ -112,6 +120,36 @@ http {
             proxy_set_header Host $host;
             proxy_cache_valid 200 30d;
             add_header Cache-Control "public, max-age=2592000" always;
+        }
+        
+        # Кеширование изображений через API proxy (из Supabase)
+        location /api/images/ {
+            proxy_cache image_cache;
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            # Кешируем на 7 дней на уровне nginx
+            proxy_cache_valid 200 7d;
+            proxy_cache_valid 404 1h;
+            proxy_cache_valid 500 502 503 504 0;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+            add_header X-Cache-Status $upstream_cache_status;
+        }
+        
+        # Кеширование оптимизированных изображений Next.js (_next/image)
+        location /_next/image {
+            proxy_cache image_cache;
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            # Кешируем оптимизированные изображения на 30 дней
+            proxy_cache_valid 200 30d;
+            proxy_cache_valid 404 1h;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+            add_header X-Cache-Status $upstream_cache_status;
         }
 
         location /api/quiz {
